--- a/public/main.css
+++ b/public/main.css
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>SpaceShooterGaiden</title>
-    <link rel="stylesheet" href="main.css" />
-  </head>
-  <body>
-    <main id="main"></main>
-    <script src="index.js" />
-  </body>
-</html>
+body {
+  margin: 0;
+  padding: 0;
+  background-color: black;
+}
