--- a/public/main.css
+++ b/public/main.css
@@ -3,3 +3,12 @@ body {
   padding: 0;
   background-color: black;
 }
+
+main {
+  position: relative;
+}
+
+main canvas {
+  position: absolute;
+  image-rendering: pixelated;
+}
